--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@mikro-orm/migrations": "^4.5.1",
     "@mikro-orm/postgresql": "^4.5.1",
     "apollo-server-express": "^2.22.2",
+    "argon2": "^0.27.1",
     "express": "^4.17.1",
     "graphql": "^15.5.0",
     "pg": "^8.5.1",
