--- a/lireddit-web/package.json
+++ b/lireddit-web/package.json
@@ -8,6 +8,7 @@
     "gen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
+    "@apollo/client": "^3.3.14",
     "@chakra-ui/icons": "^1.0.8",
     "@chakra-ui/react": "^1.3.3",
     "@chakra-ui/theme-tools": "1.0.4",
@@ -19,6 +20,7 @@
     "graphql": "^15.5.0",
     "graphql-tag": "^2.11.0",
     "next": "latest",
+    "next-apollo": "^5.0.4",
     "next-urql": "^3.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -29,6 +31,7 @@
     "@graphql-codegen/cli": "1.21.3",
     "@graphql-codegen/typescript": "1.21.1",
     "@graphql-codegen/typescript-operations": "1.17.15",
+    "@graphql-codegen/typescript-react-apollo": "^2.2.3",
     "@graphql-codegen/typescript-urql": "^2.0.5",
     "@types/node": "^14.6.0",
     "@types/react": "^16.9.46",
